--- a/bookmark.html
+++ b/bookmark.html
@@ -20,7 +20,10 @@
         />
         <h2 class="question-card__question">Why is accessibility important?</h2>
         <button class="question-card__button">show answer</button>
-        <p class="question-card__answer"></p>
+        <p class="question-card__answer">
+          Accessibility allows people with disabilities to actively participate
+          in our society.
+        </p>
         <div class="question-card__tags">
           <div class="question-card__tag">#html</div>
           <div class="question-card__tag">#accessibility</div>
@@ -37,6 +40,9 @@
           src="./assets/bookmark_filled.png"
           alt="bookmark filled"
         />
+      </a>
+      <a href="form.html" class="footer__link">
+        <img class="footer__icon" src="./assets/add.png" alt="add question" />
       </a>
       <a href="profile.html" class="footer__link">
         <img class="footer__icon" src="./assets/profile.png" alt="profile" />
