--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./js/index.js" defer></script>
+    <script src="./js/index.js"></script>
   </head>
   <body>
     <header>
@@ -16,14 +16,17 @@
       <section class="question-card">
         <img
           class="question-card__icon"
+          data-js="question-card-icon"
           src="./assets/bookmark.png"
           alt="bookmark"
         />
         <h2 class="question-card__title">
           What property flips the axes of flexbox
         </h2>
-        <button class="question-card__button">show answer</button>
-        <p class="question-card__answer"></p>
+        <button class="question-card__button" data-js="question-button">
+          show answer
+        </button>
+        <p class="question-card__answer">flex-direction</p>
         <div class="question-card__tags">
           <div class="question-card__tag">#html</div>
           <div class="question-card__tag">#css</div>
@@ -33,11 +36,14 @@
       <section class="question-card">
         <img
           class="question-card__icon question-card__icon--active"
+          data-js="question-card-icon"
           src="./assets/bookmark_filled.png"
           alt="bookmark filled"
         />
         <h2 class="question-card__title">Why is accessibility important?</h2>
-        <button class="question-card__button">show answer</button>
+        <button class="question-card__button" data-js="question-button">
+          show answer
+        </button>
         <p class="question-card__answer"></p>
         <div class="question-card__tags">
           <div class="question-card__tag">#html</div>
@@ -47,13 +53,16 @@
       <section class="question-card">
         <img
           class="question-card__icon"
+          data-js="question-card-icon"
           src="./assets/bookmark.png"
           alt="bookmark"
         />
         <h2 class="question-card__title">
           What are the different position property values?
         </h2>
-        <button class="question-card__button">show answer</button>
+        <button class="question-card__button" data-js="question-button">
+          show answer
+        </button>
         <p class="question-card__answer"></p>
         <div class="question-card__tags">
           <div class="question-card__tag">#html</div>
@@ -76,6 +85,9 @@
           src="./assets/bookmark_transparent.png"
           alt="bookmark"
         />
+      </a>
+      <a href="form.html" class="footer__link">
+        <img class="footer__icon" src="./assets/add.png" alt="add question" />
       </a>
       <a href="profile.html" class="footer__link">
         <img class="footer__icon" src="./assets/profile.png" alt="profile" />
