--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./js/profile.js" defer></script>
+
   </head>
   <body>
     <header>
@@ -25,11 +27,11 @@
         <p class="profile__about-me-content">Lorum ipsum</p>
         <div class="profile__button-wrapper">
           <button class="profile__question-button">
-            <img src="assets/question.png" />
+            <img src="./assets/question.png" />
             <span>12</span>
           </button>
           <button class="profile__bookmark-button">
-            <img src="assets/bookmark_filled.png" />
+            <img src="./assets/bookmark_filled.png" />
             <span>4</span>
           </button>
         </div>
@@ -41,8 +43,9 @@
             >Dark Mode</label
           >
           <div class="switch-container">
-            <input id="dark-mode" type="checkbox" />
+            <input id="dark-mode" type="checkbox" id="mode" />
             <div class="switch"></div>
+            <label class="label" for="mode">
           </div>
         </div>
       </section>
@@ -57,6 +60,9 @@
           src="./assets/bookmark_transparent.png"
           alt="bookmark"
         />
+      </a>
+      <a href="form.html" class="footer__link">
+        <img class="footer__icon" src="./assets/add.png" alt="add question" />
       </a>
       <a href="profile.html" class="footer__link footer__link--active">
         <img
