--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body>
+  <body class="body">
     <header>
       <h1>Quiz App</h1>
     </header>
